make sure wide images don't break out of container

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -61,6 +61,9 @@ aside {
       margin-bottom: 0;
     }
   }
+  img {
+    max-width: 100%;
+  }
 }
 
 #masthead {
